// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HTML snapshot > matches collapsed snapshot (6 entries, newest 4 visible + button) 1`] = `
"<section data-v-f626ec8a="">
  <div data-v-f626ec8a="" class="flex items-center gap-1 mb-4 pb-2 border-b-2 border-stone-200">
    <h3 data-v-f626ec8a="" class="card-title">Cook Log</h3>
    <div data-v-f6045c74="" data-v-f626ec8a="" class="icon-btn-wrap text-stone-300"><button data-v-f6045c74="" class="icon-btn icon-btn--sm" title="Copy link"><svg data-v-f626ec8a="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-link2-icon lucide-link-2" aria-hidden="true">
          <path d="M9 17H7A5 5 0 0 1 7 7h2"></path>
          <path d="M15 7h2a5 5 0 1 1 0 10h-2"></path>
          <line x1="8" x2="16" y1="12" y2="12"></line>
        </svg></button><span data-v-f6045c74="" class="icon-tooltip">Copy link</span></div>
  </div><!-- PF-41 decision A2: stacked mini-tiles row (sessions · items · [servings] · calories) -->
  <!--v-if-->
  <div data-v-f626ec8a="" id="bake-2026-02-06" class="mb-4 scroll-mt-16">
    <div data-v-f626ec8a="" class="border-2 border-stone-200 p-3 flex gap-3">
      <!-- Optional hero thumbnail -->
      <!--v-if-->
      <!-- Text content -->
      <div data-v-f626ec8a="" class="flex-1 min-w-0">
        <div data-v-f626ec8a="" class="flex items-center gap-3"><span data-v-f626ec8a="" class="font-semibold text-sm text-stone-700">2026-02-06 — Friday</span><span data-v-f626ec8a="" class="text-xs bg-stone-200 px-2 py-0.5">v1.0.5</span>
          <!--v-if-->
        </div>
        <!--v-if-->
        <!-- PF-177.9 — Compact bake stats (pills inline) -->
        <!--v-if-->
        <div data-v-f626ec8a="" class="flex items-center gap-3 text-xs text-stone-400 mt-2"><span data-v-f626ec8a="">1 notes</span>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <div data-v-f626ec8a="" id="bake-2026-02-05" class="mb-4 scroll-mt-16">
    <div data-v-f626ec8a="" class="border-2 border-stone-200 p-3 flex gap-3">
      <!-- Optional hero thumbnail -->
      <!--v-if-->
      <!-- Text content -->
      <div data-v-f626ec8a="" class="flex-1 min-w-0">
        <div data-v-f626ec8a="" class="flex items-center gap-3"><span data-v-f626ec8a="" class="font-semibold text-sm text-stone-700">2026-02-05 — Thursday</span><span data-v-f626ec8a="" class="text-xs bg-stone-200 px-2 py-0.5">v1.0.4</span>
          <!--v-if-->
        </div>
        <!--v-if-->
        <!-- PF-177.9 — Compact bake stats (pills inline) -->
        <!--v-if-->
        <div data-v-f626ec8a="" class="flex items-center gap-3 text-xs text-stone-400 mt-2"><span data-v-f626ec8a="">1 notes</span>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <div data-v-f626ec8a="" id="bake-2026-02-04" class="mb-4 scroll-mt-16">
    <div data-v-f626ec8a="" class="border-2 border-stone-200 p-3 flex gap-3">
      <!-- Optional hero thumbnail -->
      <!--v-if-->
      <!-- Text content -->
      <div data-v-f626ec8a="" class="flex-1 min-w-0">
        <div data-v-f626ec8a="" class="flex items-center gap-3"><span data-v-f626ec8a="" class="font-semibold text-sm text-stone-700">2026-02-04 — Wednesday</span><span data-v-f626ec8a="" class="text-xs bg-stone-200 px-2 py-0.5">v1.0.3</span>
          <!--v-if-->
        </div>
        <!--v-if-->
        <!-- PF-177.9 — Compact bake stats (pills inline) -->
        <!--v-if-->
        <div data-v-f626ec8a="" class="flex items-center gap-3 text-xs text-stone-400 mt-2"><span data-v-f626ec8a="">1 notes</span>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <div data-v-f626ec8a="" id="bake-2026-02-03" class="mb-4 scroll-mt-16">
    <div data-v-f626ec8a="" class="border-2 border-stone-200 p-3 flex gap-3">
      <!-- Optional hero thumbnail -->
      <!--v-if-->
      <!-- Text content -->
      <div data-v-f626ec8a="" class="flex-1 min-w-0">
        <div data-v-f626ec8a="" class="flex items-center gap-3"><span data-v-f626ec8a="" class="font-semibold text-sm text-stone-700">2026-02-03 — Tuesday</span><span data-v-f626ec8a="" class="text-xs bg-stone-200 px-2 py-0.5">v1.0.2</span>
          <!--v-if-->
        </div>
        <!--v-if-->
        <!-- PF-177.9 — Compact bake stats (pills inline) -->
        <!--v-if-->
        <div data-v-f626ec8a="" class="flex items-center gap-3 text-xs text-stone-400 mt-2"><span data-v-f626ec8a="">1 notes</span>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <div data-v-f626ec8a="" class="text-center py-2"><button data-v-f626ec8a="" type="button" data-testid="cook-log-expand-button" class="text-xs text-stone-400 hover:text-accent hover:underline transition-colors cursor-pointer bg-transparent border-0 p-0">Show 2 more bakes</button></div>
</section>"
`;

exports[`HTML snapshot > matches expanded snapshot (6 entries, all visible, no button) 1`] = `
"<section data-v-f626ec8a="">
  <div data-v-f626ec8a="" class="flex items-center gap-1 mb-4 pb-2 border-b-2 border-stone-200">
    <h3 data-v-f626ec8a="" class="card-title">Cook Log</h3>
    <div data-v-f6045c74="" data-v-f626ec8a="" class="icon-btn-wrap text-stone-300"><button data-v-f6045c74="" class="icon-btn icon-btn--sm" title="Copy link"><svg data-v-f626ec8a="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-link2-icon lucide-link-2" aria-hidden="true">
          <path d="M9 17H7A5 5 0 0 1 7 7h2"></path>
          <path d="M15 7h2a5 5 0 1 1 0 10h-2"></path>
          <line x1="8" x2="16" y1="12" y2="12"></line>
        </svg></button><span data-v-f6045c74="" class="icon-tooltip">Copy link</span></div>
  </div><!-- PF-41 decision A2: stacked mini-tiles row (sessions · items · [servings] · calories) -->
  <!--v-if-->
  <div data-v-f626ec8a="" id="bake-2026-02-06" class="mb-4 scroll-mt-16">
    <div data-v-f626ec8a="" class="border-2 border-stone-200 p-3 flex gap-3">
      <!-- Optional hero thumbnail -->
      <!--v-if-->
      <!-- Text content -->
      <div data-v-f626ec8a="" class="flex-1 min-w-0">
        <div data-v-f626ec8a="" class="flex items-center gap-3"><span data-v-f626ec8a="" class="font-semibold text-sm text-stone-700">2026-02-06 — Friday</span><span data-v-f626ec8a="" class="text-xs bg-stone-200 px-2 py-0.5">v1.0.5</span>
          <!--v-if-->
        </div>
        <!--v-if-->
        <!-- PF-177.9 — Compact bake stats (pills inline) -->
        <!--v-if-->
        <div data-v-f626ec8a="" class="flex items-center gap-3 text-xs text-stone-400 mt-2"><span data-v-f626ec8a="">1 notes</span>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <div data-v-f626ec8a="" id="bake-2026-02-05" class="mb-4 scroll-mt-16">
    <div data-v-f626ec8a="" class="border-2 border-stone-200 p-3 flex gap-3">
      <!-- Optional hero thumbnail -->
      <!--v-if-->
      <!-- Text content -->
      <div data-v-f626ec8a="" class="flex-1 min-w-0">
        <div data-v-f626ec8a="" class="flex items-center gap-3"><span data-v-f626ec8a="" class="font-semibold text-sm text-stone-700">2026-02-05 — Thursday</span><span data-v-f626ec8a="" class="text-xs bg-stone-200 px-2 py-0.5">v1.0.4</span>
          <!--v-if-->
        </div>
        <!--v-if-->
        <!-- PF-177.9 — Compact bake stats (pills inline) -->
        <!--v-if-->
        <div data-v-f626ec8a="" class="flex items-center gap-3 text-xs text-stone-400 mt-2"><span data-v-f626ec8a="">1 notes</span>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <div data-v-f626ec8a="" id="bake-2026-02-04" class="mb-4 scroll-mt-16">
    <div data-v-f626ec8a="" class="border-2 border-stone-200 p-3 flex gap-3">
      <!-- Optional hero thumbnail -->
      <!--v-if-->
      <!-- Text content -->
      <div data-v-f626ec8a="" class="flex-1 min-w-0">
        <div data-v-f626ec8a="" class="flex items-center gap-3"><span data-v-f626ec8a="" class="font-semibold text-sm text-stone-700">2026-02-04 — Wednesday</span><span data-v-f626ec8a="" class="text-xs bg-stone-200 px-2 py-0.5">v1.0.3</span>
          <!--v-if-->
        </div>
        <!--v-if-->
        <!-- PF-177.9 — Compact bake stats (pills inline) -->
        <!--v-if-->
        <div data-v-f626ec8a="" class="flex items-center gap-3 text-xs text-stone-400 mt-2"><span data-v-f626ec8a="">1 notes</span>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <div data-v-f626ec8a="" id="bake-2026-02-03" class="mb-4 scroll-mt-16">
    <div data-v-f626ec8a="" class="border-2 border-stone-200 p-3 flex gap-3">
      <!-- Optional hero thumbnail -->
      <!--v-if-->
      <!-- Text content -->
      <div data-v-f626ec8a="" class="flex-1 min-w-0">
        <div data-v-f626ec8a="" class="flex items-center gap-3"><span data-v-f626ec8a="" class="font-semibold text-sm text-stone-700">2026-02-03 — Tuesday</span><span data-v-f626ec8a="" class="text-xs bg-stone-200 px-2 py-0.5">v1.0.2</span>
          <!--v-if-->
        </div>
        <!--v-if-->
        <!-- PF-177.9 — Compact bake stats (pills inline) -->
        <!--v-if-->
        <div data-v-f626ec8a="" class="flex items-center gap-3 text-xs text-stone-400 mt-2"><span data-v-f626ec8a="">1 notes</span>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <div data-v-f626ec8a="" id="bake-2026-02-02" class="mb-4 scroll-mt-16">
    <div data-v-f626ec8a="" class="border-2 border-stone-200 p-3 flex gap-3">
      <!-- Optional hero thumbnail -->
      <!--v-if-->
      <!-- Text content -->
      <div data-v-f626ec8a="" class="flex-1 min-w-0">
        <div data-v-f626ec8a="" class="flex items-center gap-3"><span data-v-f626ec8a="" class="font-semibold text-sm text-stone-700">2026-02-02 — Monday</span><span data-v-f626ec8a="" class="text-xs bg-stone-200 px-2 py-0.5">v1.0.1</span>
          <!--v-if-->
        </div>
        <!--v-if-->
        <!-- PF-177.9 — Compact bake stats (pills inline) -->
        <!--v-if-->
        <div data-v-f626ec8a="" class="flex items-center gap-3 text-xs text-stone-400 mt-2"><span data-v-f626ec8a="">1 notes</span>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <div data-v-f626ec8a="" id="bake-2026-02-01" class="mb-4 scroll-mt-16">
    <div data-v-f626ec8a="" class="border-2 border-stone-200 p-3 flex gap-3">
      <!-- Optional hero thumbnail -->
      <!--v-if-->
      <!-- Text content -->
      <div data-v-f626ec8a="" class="flex-1 min-w-0">
        <div data-v-f626ec8a="" class="flex items-center gap-3"><span data-v-f626ec8a="" class="font-semibold text-sm text-stone-700">2026-02-01 — Sunday</span><span data-v-f626ec8a="" class="text-xs bg-stone-200 px-2 py-0.5">v1.0.0</span>
          <!--v-if-->
        </div>
        <!--v-if-->
        <!-- PF-177.9 — Compact bake stats (pills inline) -->
        <!--v-if-->
        <div data-v-f626ec8a="" class="flex items-center gap-3 text-xs text-stone-400 mt-2"><span data-v-f626ec8a="">1 notes</span>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`HTML snapshot > matches snapshot 1`] = `
"<section data-v-f626ec8a="">
  <div data-v-f626ec8a="" class="flex items-center gap-1 mb-4 pb-2 border-b-2 border-stone-200">
    <h3 data-v-f626ec8a="" class="card-title">Cook Log</h3>
    <div data-v-f6045c74="" data-v-f626ec8a="" class="icon-btn-wrap text-stone-300"><button data-v-f6045c74="" class="icon-btn icon-btn--sm" title="Copy link"><svg data-v-f626ec8a="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-link2-icon lucide-link-2" aria-hidden="true">
          <path d="M9 17H7A5 5 0 0 1 7 7h2"></path>
          <path d="M15 7h2a5 5 0 1 1 0 10h-2"></path>
          <line x1="8" x2="16" y1="12" y2="12"></line>
        </svg></button><span data-v-f6045c74="" class="icon-tooltip">Copy link</span></div>
  </div><!-- PF-41 decision A2: stacked mini-tiles row (sessions · items · [servings] · calories) -->
  <!--v-if-->
  <div data-v-f626ec8a="" id="bake-2026-02-05" class="mb-4 scroll-mt-16">
    <div data-v-f626ec8a="" class="border-2 border-stone-200 p-3 flex gap-3">
      <!-- Optional hero thumbnail -->
      <!--v-if-->
      <!-- Text content -->
      <div data-v-f626ec8a="" class="flex-1 min-w-0">
        <div data-v-f626ec8a="" class="flex items-center gap-3"><span data-v-f626ec8a="" class="font-semibold text-sm text-stone-700">2026-02-05 — Thursday</span><span data-v-f626ec8a="" class="text-xs bg-stone-200 px-2 py-0.5">v1.0.0</span>
          <!--v-if-->
        </div>
        <!--v-if-->
        <!-- PF-177.9 — Compact bake stats (pills inline) -->
        <!--v-if-->
        <div data-v-f626ec8a="" class="flex items-center gap-3 text-xs text-stone-400 mt-2"><span data-v-f626ec8a="">2 notes</span>
          <!--v-if--><span data-v-f626ec8a="">1 next-time</span>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</section>"
`;
